loading leaflet needs https

--- a/docs/_includes/_head.html
+++ b/docs/_includes/_head.html
@@ -4,7 +4,7 @@
 	
 	<title>Responsive Popup by YaFred</title>
 	
-	<script src="http://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
 	
 	<script src="{{ '/assets/leaflet.responsive.popup-src.js' | absolute_url }}"></script>
