--- a/docs/assets/leaflet.responsive.popup.css
+++ b/docs/assets/leaflet.responsive.popup.css
@@ -1,9 +1,18 @@
+
+/* North */
+.leaflet-resp-popup-tip-n {
+	box-shadow: none;
+}
+
+
+/* South */
 .leaflet-resp-popup-tip-container-s {
 	position: relative;	
 }
 
 .leaflet-resp-popup-tip-s {
 	margin: 11px auto 0;
+	box-shadow: none;
 }
 
 .leaflet-container a.leaflet-resp-popup-close-button-s {
@@ -11,6 +20,7 @@
 }
 
 
+/* West */
 .leaflet-resp-popup-tip-container-w {
 	width: 20px;
 	margin-left: 0;
@@ -22,21 +32,24 @@
 
 .leaflet-resp-popup-tip-w {
 	margin: 0 -11px;
+	box-shadow: none;
 }
 
 
+/* East */
 .leaflet-resp-popup-tip-container-e {
 	width: 20px;
 	left: 0;
 	top: 25%; // needs adjusting in javascript
 }
 
-
 .leaflet-resp-popup-tip-e {
 	margin: 0 11px;
+	box-shadow: none;
 }
 
 
+/* South-East */
 .leaflet-resp-popup-tip-container-se {
 	width: 20px;
 	left: 0;
@@ -45,7 +58,8 @@
 }
 
 .leaflet-resp-popup-tip-se {
-	margin: 11px 11px 11px -8px; 
+	margin: 11px 11px 11px -8px;
+	box-shadow: none;
 }
 
 .leaflet-resp-popup-content-wrapper-se {
@@ -53,7 +67,20 @@
 }
 
 
+/* East-South */
+.leaflet-resp-popup-tip-container-es {
+	width: 20px;
+	left: 0;
+	top: 0;
+}
 
+.leaflet-resp-popup-tip-es {
+	margin: -11px 11px;
+	box-shadow: none;
+}
+
+
+/* North-East */
 .leaflet-resp-popup-tip-container-ne {
 	width: 20px;
 	left: 0;
@@ -63,6 +90,7 @@
 
 .leaflet-resp-popup-tip-ne {
 	margin: -8px 11px 11px -8px;
+	box-shadow: none;
 }
 
 .leaflet-resp-popup-content-wrapper-ne {
@@ -70,7 +98,21 @@
 }
 
 
+/* East-North */
+.leaflet-resp-popup-tip-container-en {
+	width: 20px;
+	left: 0;
+	margin-left: -20px;
+	margin-top: -20px;
+}
 
+.leaflet-resp-popup-tip-en {
+	margin: 11px 11px 11px 11px;
+	box-shadow: none;
+}
+
+
+/* North-West */
 .leaflet-resp-popup-tip-container-nw {
 	width: 20px;
 	margin-right: 0;
@@ -81,6 +123,7 @@
 
 .leaflet-resp-popup-tip-nw {
 	margin: -8px 11px 11px 11px;
+	box-shadow: none;
 }
 
 .leaflet-resp-popup-content-wrapper-nw {
@@ -88,7 +131,22 @@
 }
 
 
+/* West-North */
+.leaflet-resp-popup-tip-container-wn {
+	width: 20px;
+	margin-left: 0;
+	margin-top: -20px;
+	left: 100%;
+	right: 0;
+}
 
+.leaflet-resp-popup-tip-wn {
+	margin: 11px 11px 0px -11px;
+	box-shadow: none;
+}
+
+
+/* South-West */
 .leaflet-resp-popup-tip-container-sw {
 	width: 20px;
 	left: 100%;
@@ -98,7 +156,24 @@
 
 .leaflet-resp-popup-tip-sw {
 	margin: 11px 11px 11px 11px;
+	box-shadow: none;
 }
 .leaflet-resp-popup-content-wrapper-sw {
 	border-radius: 20px 0 20px 20px;
+}
+
+
+/* West-South */
+.leaflet-resp-popup-tip-container-ws {
+	width: 20px;
+	margin-left: 0;
+	margin-right: -20px;
+	left: 100%;
+	right: 0;
+	top: 0;
+}
+
+.leaflet-resp-popup-tip-ws {
+	margin: -11px -11px;
+	box-shadow: none;
 }
