--- a/docs/_includes/_head.html
+++ b/docs/_includes/_head.html
@@ -7,5 +7,5 @@
 	<script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
 	
-	<script src="{{ '/assets/leaflet.responsive.popup-src.js' | absolute_url }}"></script>
+	<script src="{{ '/assets/leaflet.responsive.popup.js' | absolute_url }}"></script>
 	<link rel="stylesheet" href="{{ '/assets/leaflet.responsive.popup.css' | absolute_url }}" />
