--- a/docs/_includes/_footer_scripts.html
+++ b/docs/_includes/_footer_scripts.html
@@ -1,5 +1,11 @@
-	<!-- analytics -->
-    <script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
+<script>
+	$(document).foundation();
+</script>
+
+<!-- analytics -->
+<script>
 if(window.location.hostname != "localhost") {
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -9,4 +15,4 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 ga('create', 'UA-21317761-7', 'auto');
 ga('send', 'pageview');
 }
-    </script>
+</script>
