--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,11 @@
 	{% include _head.html %}
 </head>
 <body id="top-of-page" class="">
+	{% include _navigation.html %}
+	
+	<div class="row column">
 	{{ content }}
+	</div>
 
 	{% include _footer_scripts.html %}
 </body>
