--- a/docs/_includes/_navigation.html
+++ b/docs/_includes/_navigation.html
@@ -8,10 +8,10 @@
   <div id="responsive-menu">
     <div class="top-bar-right">
       <ul class="menu vertical medium-horizontal">
-        <li><a href="/">Home</a></li>
-        <li><a href="/default-marker">Demo1</a></li>
-        <li><a href="/circle-marker">Demo2</a></li>
-        <li><a href="/popup-css">Future</a></li>
+        <li><a href="{{ '/index.html' | absolute_url }}">Home</a></li>
+        <li><a href="{{ '/default-marker' | absolute_url }}">Demo1</a></li>
+        <li><a href="{{ '/circle-marker' | absolute_url }}">Demo2</a></li>
+        <li><a href="{{ '/popup-css' | absolute_url }}">Future</a></li>
       </ul>
     </div>
   </div>
