--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
 	{% include _head.html %}
 </head>
 <body id="top-of-page" class="">
-	{% include _navigation.html %}
+	{% include _top_bar.html %}
 	
 	<div class="row column">
 	{{ content }}
