push the menu icon to the right (for small)

--- a/docs/_includes/_top_bar.html
+++ b/docs/_includes/_top_bar.html
@@ -1,8 +1,8 @@
 <div class="top-bar">
+  <div class="float-right" style="padding: 0.5rem 1rem 0.5rem 0;" data-responsive-toggle="responsive-menu" data-hide-for="medium">
+    <button class="menu-icon dark" type="button" data-toggle></button>
+  </div> 
   <div class="top-bar-title">
-    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-      <button class="menu-icon dark" type="button" data-toggle></button>
-    </span> 
     <strong>Leaflet Responsive Popup</strong>
   </div>
   <div id="responsive-menu">
