--- a/docs/_includes/_main_menu.html
+++ b/docs/_includes/_main_menu.html
@@ -4,7 +4,7 @@
   <ul class="menu">
     <li><a href="{{ '/default-marker' | absolute_url }}">Using Default marker</a></li>
     <li><a href="{{ '/circle-marker' | absolute_url }}">Using Circle marker</a></li>
-    <li><a href="{{ '/popup-css' | absolute_url }}">CSS for future tips</a></li>
+    <li><a href="{{ '/popup-css' | absolute_url }}">CSS for Popup tips</a></li>
   </ul>
 </li>
 
