implement tips (does not work yet on markers)

--- a/docs/_includes/_main_menu.html
+++ b/docs/_includes/_main_menu.html
@@ -2,8 +2,12 @@
 <li>
   <a href="#">Demos</a>
   <ul class="menu">
-    <li><a href="{{ '/default-marker' | absolute_url }}">Using Default marker</a></li>
-    <li><a href="{{ '/circle-marker' | absolute_url }}">Using Circle marker</a></li>
+    <li><a href="{{ '/open-on-map' | absolute_url }}">Open on map (no tip)</a></li>
+    <li><a href="{{ '/open-on-map-tip' | absolute_url }}">Open on map</a></li>
+    <li><a href="{{ '/circle-marker' | absolute_url }}">Circle marker (no tip)</a></li>
+    <li><a href="{{ '/default-marker' | absolute_url }}">Default marker (no tip)</a></li>
+    <li><a href="{{ '/circle-marker-tip' | absolute_url }}">Circle marker</a></li>
+    <li><a href="{{ '/default-marker-tip' | absolute_url }}">Default marker</a></li>
     <li><a href="{{ '/popup-css' | absolute_url }}">CSS for Popup tips</a></li>
   </ul>
 </li>
