hide tip when opening default popup in the no tip example

--- a/docs/_includes/_head.html
+++ b/docs/_includes/_head.html
@@ -17,3 +17,9 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
+<style>
+.no-tip .leaflet-popup-tip-container {
+	display:none;
+}
+</style>
+
