create rtl pages

--- a/docs/_includes/_main_menu.html
+++ b/docs/_includes/_main_menu.html
@@ -11,4 +11,16 @@
     <li><a href="{{ '/popup-css' | absolute_url }}">CSS for Popup tips</a></li>
   </ul>
 </li>
+<li>
+  <a href="#">RTL Demos</a>
+  <ul class="menu">
+    <li><a href="{{ '/open-on-map-tip-rtl' | absolute_url }}">Open on map</a></li>
+    <li><a href="{{ '/default-marker-tip-rtl' | absolute_url }}">Default marker</a></li>
+    <li><a href="{{ '/circle-marker-tip-rtl' | absolute_url }}">Circle marker</a></li>
+    <li><a href="{{ '/open-on-map-rtl' | absolute_url }}">Open on map (no tip)</a></li>
+    <li><a href="{{ '/default-marker-rtl' | absolute_url }}">Default marker (no tip)</a></li>
+    <li><a href="{{ '/circle-marker-rtl' | absolute_url }}">Circle marker (no tip)</a></li>
+    <li><a href="{{ '/popup-css-rtl' | absolute_url }}">CSS for Popup tips</a></li>
+  </ul>
+</li>
 
