--- a/docs/_layouts/rtl.html
+++ b/docs/_layouts/rtl.html
@@ -5,6 +5,7 @@
 <html class="no-js" lang="en">
 <head>
 	{% include _head.html %}
+<link rel="stylesheet" href="{{ '/assets/leaflet.responsive.popup.rtl.css' | absolute_url }}" />
 </head>
 <body id="top-of-page" class="" style="direction: rtl;">
 	{% include _top_bar.html %}
