fix rtl in css instead of js

--- a/docs/assets/leaflet.responsive.popup.rtl.css
+++ b/docs/assets/leaflet.responsive.popup.rtl.css
@@ -3,6 +3,10 @@
  (c) 2018 https://github.com/yafred
 */
 
+.leaflet-popup {
+	left: 0px;
+}
+
 
 /* North */
 .leaflet-resp-popup-north .leaflet-popup-tip {
